src: changes page style to fix menu overflow with two-row layout

--- a/src/.kask/propagate/styles.css
+++ b/src/.kask/propagate/styles.css
@@ -68,14 +68,23 @@ a {
 }
 
 nav {
-  & > ul {
-    margin: -10px -10px 0;
-    padding: 0;
+  margin: -10px -10px 0;
+  padding: 0;
 
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 0 10px;
+
+  & > ul {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     gap: 0 10px;
+
+    margin: 0;
+    padding: 0;
 
     & > li {
       list-style: none;
@@ -87,11 +96,16 @@ nav {
     }
   }
 
-  #home-button > a > img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
+  #home-button {
     display: block;
+    padding: 10px;
+
+    & > img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      overflow: hidden;
+      display: block;
+    }
   }
 }
